--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+dj-database-url==0.4.1
 Django==1.9.6
 django-braces==1.8.1
 django-cors-headers==1.1.0
@@ -8,10 +9,12 @@ django-oauth-toolkit==0.10.0
 django-oauth2-provider==0.2.6.1
 djangorestframework==3.3.3
 djangorestframework-oauth==1.1.0
+gunicorn==19.6.0
 httplib2==0.9.2
 Markdown==2.6.6
 oauth2==1.9.0.post1
 oauthlib==1.0.3
+psycopg2==2.6.1
 requests==2.10.0
 shortuuid==0.4.3
 six==1.10.0
