--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-oauth-toolkit==0.10.0
 django-oauth2-provider==0.2.6.1
 djangorestframework==3.3.3
 djangorestframework-oauth==1.1.0
+feedparser==5.2.1
 gunicorn==19.6.0
 httplib2==0.9.2
 Markdown==2.6.6
