--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Markdown==2.6.6
 oauth2==1.9.0.post1
 oauthlib==1.0.3
 psycopg2==2.6.1
+pytz==2016.4
 requests==2.10.0
 shortuuid==0.4.3
 six==1.10.0
