--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+certifi==2016.2.28
 dj-database-url==0.4.1
 Django==1.9.6
 django-braces==1.8.1
@@ -9,6 +10,7 @@ django-oauth-toolkit==0.10.0
 django-oauth2-provider==0.2.6.1
 djangorestframework==3.3.3
 djangorestframework-oauth==1.1.0
+elasticsearch==1.9.0
 feedparser==5.2.1
 gunicorn==19.6.0
 httplib2==0.9.2
@@ -16,7 +18,10 @@ Markdown==2.6.6
 oauth2==1.9.0.post1
 oauthlib==1.0.3
 psycopg2==2.6.1
+pyelasticsearch==1.4
 pytz==2016.4
 requests==2.10.0
 shortuuid==0.4.3
+simplejson==3.8.2
 six==1.10.0
+urllib3==1.15.1
